# blueprint.svg

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: architecture.md  contributing.md  ir-spec.md  prompting.md
examples/: architecture_web_app.json  er_blog.json  flowchart_login.json  mindmap_ml_pipeline.json  sequence_oauth.json
src/blueprint_svg/: __init__.py  ir.py  layout.py  llm.py  prompts.py  renderer.py
tests/: test_ir.py  test_renderer.py
